Fixed overflow (removing scrollbars) - Thanks

--- a/WeatherGenerator/weatherGeneratorMicro.css
+++ b/WeatherGenerator/weatherGeneratorMicro.css
@@ -33,7 +33,7 @@
     grid-template-rows: 50px 25px 25px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    overflow-x: none;
+    overflow: hidden
 }
 
 
